docs: more updates from working sessions

--- a/docs/Security-Compliance/Security-Controls/sa/sa-05.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-05.md
@@ -17,10 +17,10 @@ d. Distribute documentation to [system/network administrators, end users (if app
 
 ## OPS Implementation
 
-TODO: Reference architecture and boundary diagram and where they're stored (GH)
+Some of the required documentation is contained within our GitHub repositories, OPRE Sharepoint and Teams channel. Some user-facing documents are within the application itself.
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+Hybrid with OPS and ACF Tech
 
 ### Related Content
