--- a/docs/Security-Compliance/Security-Controls/sa/sa-08.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-08.md
@@ -11,10 +11,10 @@ c. Apply secure coding per the HHS Policy for Software Development Secure Coding
 
 ## OPS Implementation
 
-OPS is engineered according to the specified principles and practices.
+OPS is engineered according to the specified principles and practices. See the OPS Boundary Diagram which is contained in the ATO artifacts, including but not limited to the Configuration Managemetn Plan. OPS complies with the NIST SP 800-160 Volume 1 engineering requirements as well as the HHS Enterprise Performance Lifecycle.
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+Hybrid with ACF Tech and OPS
 
 ### Related Content
