--- a/docs/Security-Compliance/Security-Controls/sa/sa-09-2.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-09-2.md
@@ -5,10 +5,10 @@ Require providers of the following external system services to identify the func
 
 ## OPS Implementation
 
-TODO: provide inherited text
+Azure and AMS provided permissible ports, functions, protocols, and services for interfacin with their systems.
 
 ### Control Origination
 
-Hybrid with HHS's AMS, ACF Tech, and OPS
+Hybrid with HHS's AMS, ACF Tech
 
 ### Related Content
