--- a/docs/Security-Compliance/Security-Controls/sa/sa-09.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-09.md
@@ -9,10 +9,10 @@ c. Employ the following processes, methods, and techniques to monitor control co
 
 ## OPS Implementation
 
-TODO: provide inherited text
+Fully inherited from Azure and ACF Tech
 
 ### Control Origination
 
-Hybrid with HHS's AMS, ACF Tech, and OPS
+Hybrid with HHS's AMS, ACF Tech
 
 ### Related Content
