--- a/docs/Security-Compliance/Security-Controls/sa/sa-10.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-10.md
@@ -15,12 +15,10 @@ e. Track security flaws and flaw resolution within the system, component, or ser
 
 ## OPS Implementation
 
-TODO: Generate text on GitHub, version control, etc... for a-d
-
-TODO: e. Reference VMP, dependabot/renovate bot text
+See the Configuration Management Plan documentation that is part of the ATO package for details of implementation.
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+Hybrid with ACF Tech, Azure, and OPS
 
 ### Related Content
