--- a/docs/Security-Compliance/Security-Controls/sa/sa-11.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-11.md
@@ -15,10 +15,10 @@ e. Correct flaws identified during testing and evaluation.
 
 ## OPS Implementation
 
-TODO: a: generate text around VMP, renovatebot, dependabot.  b: generate text about unit/integration/e2e testing. c: CI/CD pipeline executes all tests for all PRs, merges, and deploys.  d & e: text about using GH to track flaws throughout their lifecycle
+See the Configuration Management Plan and related documentation, that is part of the ATO package, for details of implementation.
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+Hybrid with ACF Tech, Azure, and OPS
 
 ### Related Content
