--- a/docs/Security-Compliance/Security-Controls/sa/sa-15-3.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-15-3.md
@@ -8,10 +8,12 @@ Require the developer of the system, system component, or system service to perf
 
 ## OPS Implementation
 
-TODO: meeting minutes with ACF Tech
+OPS developers performs essential analysis regarding the application's design, application requiremesnts, and source code at various porinst in the development lifecycle in compliance with the HHS and ACF policies.
 
 ### Control Origination
 
 Hybrid with OPS and ACF Tech
 
 ### Related Content
+
+Criticality analysis performed by the developer provides input to the criticality analysis performed by organizations. Developer input is essential to organizational criticality analysis because organizations may not have access to detailed design documentation for system components that are developed as commercial off-the-shelf products. Such design documentation includes functional specifications, high-level designs, low-level designs, source code, and hardware schematics. Criticality analysis is important for organizational systems that are designated as high value assets. High value assets can be moderate- or high-impact systems due to heightened adversarial interest or potential adverse effects on the federal enterprise. Developer input is especially important when organizations conduct supply chain criticality analyses.
