--- a/docs/Security-Compliance/Security-Controls/sa/sa-15.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-15.md
@@ -11,10 +11,10 @@ b. Review the development process, standards, tools, tool options, and tool conf
 
 ## OPS Implementation
 
-TODO: talk about ADRs and benefits and link to
+OPS development documentation pertaining to decisions areound architectural standards, processes, tools, and other content are contained in Architectural Decision Records (ADR) that are contained within our GitHub repository.
 
 ### Control Origination
 
-OPS
+System-Specific
 
 ### Related Content
