--- a/docs/Security-Compliance/Security-Controls/sa/sa-22.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-22.md
@@ -1,5 +1,5 @@
 # System and Services Acquisition
-## SA-15 Unsupported System Components
+## SA-22 Unsupported System Components
 
 a. Replace system components when support for the components is no longer available from the developer, vendor, or manufacturer; or
 
@@ -7,10 +7,10 @@ b. Provide the following options for alternative sources for continued support f
 
 ## OPS Implementation
 
-TODO: reference text about software dependency management with dependabot and renovatebot
+Software dependency management processes are discsused in detail in the Configuration Management Plan and related documentation. OPS only makes use of supported software products. See Azure SSP for more information.
 
 ### Control Origination
 
-Hybrid with IaaS provider, HHS, and OPS
+Hybrid with Azure and OPS
 
 ### Related Content
