--- a/docs/Security-Compliance/Security-Controls/sc/sc-07-3.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07-3.md
@@ -4,15 +4,11 @@ Limit the number of external network connections to the system.
 
 ## OPS Implementation
 
-TODO: Come up with text based on how we implement our Azure virtual network
-
 OPS infrastructure resources have only the minimum number of external network connectivity for required application functionality required integrations.
-
-TODO: Come up with text on how we handle outbound/external Internet access via NAT gateways. i.e. CI/CD process
 
 ### Control Origination
 
-TODO: Find out if any inheritance from IaaS provider ?
+System Specific
 
 ### Related Content
 Limiting the number of external network connections facilitates monitoring of inbound and outbound communications traffic. The Trusted Internet Connection DHS TIC initiative is an example of a federal guideline that requires limits on the number of external network connections. Limiting the number of external network connections to the system is  important during transition periods from older to newer technologies (e.g., transitioning from IPv4 to IPv6 network protocols). Such transitions may require implementing the older and newer technologies simultaneously during the transition period and thus increase the number of access points to the system.
