--- a/docs/Security-Compliance/Security-Controls/sc/sc-07-5.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07-5.md
@@ -5,13 +5,11 @@ Deny network communications traffic by default and allow network communications 
 
 ## OPS Implementation
 
-OPS denies all network traffic flows by default except where specifically and explicitly allowed
-
-TODO: Review HHS-issued ZTA language and requirements
+By configuration, OPS denies all network traffic flows by default except where specifically and explicitly allowed.
 
 ### Control Origination
 
-Hybrid with IaaS provider and ACF/OCIO enterprise architecture
+Hybrid with Azure and ACF Tech (AMS)
 
 ### Related Content
 Denying by default and allowing by exception applies to inbound and outbound network communications traffic. A deny-all, permit-by-exception network communications traffic policy ensures that only those system connections that are essential and approved are allowed. Deny by default, allow by exception also applies to a system that is connected to an external system.
