--- a/docs/Security-Compliance/Security-Controls/sc/sc-07-7.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07-7.md
@@ -5,10 +5,11 @@ Prevent split tunneling for remote devices connecting to organizational systems 
 
 ## OPS Implementation
 
-OPS does not utilize any split tunneling for any network connectivity
+OPS does not utilize any split tunneling for any network connectivity. See the Azure SSP for the Azure implementation.
 
 ### Control Origination
 
+Not Applicable at the OPS layer. 
 
 ### Related Content
 
