--- a/docs/Security-Compliance/Security-Controls/sc/sc-07-8.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07-8.md
@@ -5,11 +5,11 @@ Route [ACF-defined internal communications traffic] to [ACF-defined external net
 
 ## OPS Implementation
 
-TODO: Seek input and language from ACF/OCIO
+OPS does not have internal communications traffic that is destined to ACF-defined proxy networks outside the Azure tenancy.
 
 ### Control Origination
 
-partially inherited with IaaS provider and ACF/OCIO
+Hybrid with ACF Tech
 
 ### Related Content
 
