--- a/docs/Security-Compliance/Security-Controls/sc/sc-07.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07.md
@@ -9,11 +9,11 @@ c. Connect to external networks or systems only through managed interfaces consi
 
 ## OPS Implementation
 
-TODO: Come up with text based on how we implement our Azure virtual network
+For implementation details, see the OPS Configuration Management Plan documentation, which contains our Boundary Diagram and discussion on it, sa well as related documentation in the OPS ATO package.
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+System Specific
 
 ### Related Content
 Managed interfaces include gateways, routers, firewalls, guards, network-based malicious code analysis, virtualization systems, or encrypted tunnels implemented within a security architecture. Subnetworks that are physically or logically separated from internal networks are referred to as demilitarized zones or DMZs. Restricting or prohibiting interfaces within organizational systems includes restricting external web traffic to designated web servers within managed interfaces, prohibiting external traffic that appears to be spoofing internal addresses, and prohibiting internal traffic that appears to be spoofing external addresses. SP 800-189 provides additional information on source address validation techniques to prevent ingress and egress of traffic with spoofed addresses. Commercial telecommunications services are provided by network components and consolidated management systems shared by customers. These services may also include third party-provided access lines and other service elements. Such services may represent sources of increased risk despite contract security provisions. Boundary protection may be implemented as a common control for all or part of an organizational network such that the boundary to be protected is greater than a system-specific boundary (i.e., an authorization boundary).
