docs: latest working session

--- a/docs/Security-Compliance/Security-Controls/sa/sa-15-3.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-15-3.md
@@ -8,11 +8,11 @@ Require the developer of the system, system component, or system service to perf
 
 ## OPS Implementation
 
-OPS developers performs essential analysis regarding the application's design, application requiremesnts, and source code at various porinst in the development lifecycle in compliance with the HHS and ACF policies.
+OPS developers performs essential analysis regarding the application's design, application requiremesnts, and source code at various points in the development lifecycle in compliance with the HHS and ACF policies. In addition, the developer team reviews regularly the application requirement, design, development and deployment progress activities with the Product Owner and other relevant stakeholders.
 
 ### Control Origination
 
-Hybrid with OPS and ACF Tech
+Hybrid with ACF Tech (governance team) and OPS
 
 ### Related Content
 
