--- a/docs/Security-Compliance/Security-Controls/sa/sa-22.md
+++ b/docs/Security-Compliance/Security-Controls/sa/sa-22.md
@@ -7,10 +7,10 @@ b. Provide the following options for alternative sources for continued support f
 
 ## OPS Implementation
 
-Software dependency management processes are discsused in detail in the Configuration Management Plan and related documentation. OPS only makes use of supported software products. See Azure SSP for more information.
+Software dependency management processes are discsused in detail in the Configuration Management Plan and related documentation. OPS only makes use of supported software products. OPS regularly reviews and takes action accordingly for End-of-Life (EOL) related unsupported components from ACF Tech (related to Splunk and AMS) and Azure Cloud.
 
 ### Control Origination
 
-Hybrid with Azure and OPS
+Hybrid with ACF Tech, Azure, and OPS
 
 ### Related Content
