--- a/docs/Security-Compliance/Security-Controls/sc/sc-02.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-02.md
@@ -5,10 +5,12 @@ Separate user functionality, including user interface services, from system mana
 
 ## OPS Implementation
 
-At an application level, OPS implements role and group-based access and privilege separation for users such that only users that need and have been authorized for administrative functions within OPS will see and have access to those features.
+At an application level, OPS implements role and group-based access and privilege separation for users such that only users that need and have been authorized for administrative and system management functions within OPS will see and have access to those features.
+
+The management aspects related to user authentication is entirely delegated out to and through AMS.
 
 ### Control Origination
 
-OPS system-specific
+Hybrid with ACF Tech and OPS.
 
 ### Related Content
