--- a/docs/Security-Compliance/Security-Controls/sc/sc-05.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-05.md
@@ -39,9 +39,11 @@ xi. Implementing a separate route or circuit for service redundancy.
 
 OPS utilizes multiple layers of protection provided from Azure including the Web Application Firewall (WAF) and Azure's global protections against DDoS at their infrastructure layer.
 
+For AMS's implementation of this control, see the AMS SSP.
+
 ### Control Origination
 
-Inherited from Azure
+Hybrid with ACF Tech and Azure.
 
 ### Related Content
 Denial-of-service events may occur due to a variety of internal and external causes, such as an attack by an adversary or a lack of planning to support organizational needs with respect to capacity and bandwidth. Such attacks can occur across a wide range of network protocols (e.g., IPv4, IPv6). A variety of technologies are available to limit or eliminate the origination and effects of denial-of-service events. For example, boundary protection devices can filter certain types of packets to protect system components on internal networks from being directly affected by or the source of denial-of-service attacks. Employing increased network capacity and bandwidth combined with service redundancy also reduces the susceptibility to denial-of-service events.
