--- a/docs/Security-Compliance/Security-Controls/sc/sc-07-4.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07-4.md
@@ -11,11 +11,11 @@
 
 ## OPS Implementation
 
-Fully inherited from Azure and ACF Tech (AMS)
+Fully inherited from Azure and ACF Tech (AMS and Splunk)
 
 ### Control Origination
 
-Hybrid Azure and ACF Tech
+Hybrid with Azure and ACF Tech
 
 ### Related Content
 External telecommunications services can provide data and/or voice communications services. Examples of control plane traffic include Border Gateway Protocol (BGP) routing, Domain Name System (DNS), and management protocols. See SP 800-189 for additional information on the use of the resource public key infrastructure (RPKI) to protect BGP routes and detect unauthorized BGP announcements.
