--- a/docs/Security-Compliance/Security-Controls/sc/sc-07-8.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07-8.md
@@ -9,7 +9,7 @@ OPS does not have internal communications traffic that is destined to ACF-define
 
 ### Control Origination
 
-Hybrid with ACF Tech
+System Specific
 
 ### Related Content
 
