--- a/docs/Security-Compliance/Security-Controls/sc/sc-07.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-07.md
@@ -9,7 +9,7 @@ c. Connect to external networks or systems only through managed interfaces consi
 
 ## OPS Implementation
 
-For implementation details, see the OPS Configuration Management Plan documentation, which contains our Boundary Diagram and discussion on it, sa well as related documentation in the OPS ATO package.
+For implementation details, see the OPS Configuration Management Plan documentation, which contains our Boundary Diagram and discussion on it, as well as related documentation in the OPS ATO package.
 
 ### Control Origination
 
