--- a/docs/Security-Compliance/Security-Controls/sc/sc-10.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-10.md
@@ -5,11 +5,11 @@ Terminate the network connection associated with a communications session at the
 
 ## OPS Implementation
 
-TODO: Seek inherited text
+TCP traffic teardown and management of address and port pairs are fully inherited from Azure and ACF Tech (AMS and Splunk)
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+Hybrid with Azure, ACF Tech
 
 ### Related Content
 
