--- a/docs/Security-Compliance/Security-Controls/sc/sc-12.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-12.md
@@ -5,13 +5,11 @@ Establish and manage cryptographic keys when cryptography is employed within the
 
 ## OPS Implementation
 
-All cryptographic keys for OPS are managed entirely by the IaaS provider
-
-TODO: Seek inherited text
+All cryptographic keys for OPS are managed entirely by Azure
 
 ### Control Origination
 
-Inherited from IaaS provider
+Inherited from Azure
 
 ### Related Content
 
