--- a/docs/Security-Compliance/Security-Controls/sc/sc-15.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-15.md
@@ -9,11 +9,9 @@ b. Provide an explicit indication of use to users physically present at the devi
 
 OPS does not utilize Collaborative Computing Devices and Applications
 
-TODO: ??? Revisit if we should say not applicable or something like that instead
-
 ### Control Origination
 
-Hybrid inheritance with IaaS provider ACF/OCIO
+Not applicable
 
 ### Related Content
 
