--- a/docs/Security-Compliance/Security-Controls/sc/sc-17.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-17.md
@@ -7,13 +7,11 @@ b. Include only approved trust anchors in trust stores or certificate stores man
 
 ## OPS Implementation
 
-All PKI certificates for OPS are managed entirely by the IaaS provider
-
-TODO: Seek inherited text
+All PKI certificates for OPS are managed entirely by Azure
 
 ### Control Origination
 
-Inherited from IaaS provider
+Inherited from Azure and ACF Tech (AMS)
 
 ### Related Content
 
