--- a/docs/Security-Compliance/Security-Controls/sc/sc-18.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-18.md
@@ -11,21 +11,15 @@ The "frontend" or user interface component of OPS is heavily reliant on client-e
 
 * All user-supplied form input is validated and sanitized by a separate code library that interacts with React.
 * Multiple types of security and linting scans take place on every pull request to an environment branch in our source code repository, as well as nightly scans for SCA security needs.
-* Additiionally, OPS utilizes an automated dependency management mechanism to rapidly and automatically update and apply security patches for React and any other Javascript dependencies. More info on the security scans and dependency management can be found in [RA-05](../ra-05/index.md)
+* Additiionally, OPS utilizes an automated dependency management mechanism to rapidly and automatically update and apply security patches for React and any other Javascript dependencies. More info on the security scans and dependency management can be found in [RA-05](../ra/ra-05.md)
 * OPS routinely undergoes independent penetration testing orchestrated by ACF Tech
 
-* TODO: setting Content-Security-Policy?? Additionally, Content Security Policy headers are transimitted to the user's browser to restrict the execution of unsafe scripts and prevent unauthorized code execution. This helps mitigate the risks associated with malicious mobile code.
-
-* TODO: Investigate setting certain security parameters in React like  "HTTPOnly" and the "Secure" flags for any cookies
-
-TODO: Seek any ACF Tech text about Splunk that might be applicable ?
+Additionally, Content Security Policy headers are transimitted to the user's browser to restrict the execution of unsafe scripts and prevent unauthorized code execution. This helps mitigate the risks associated with malicious mobile code.
 
 ### Control Origination
 
-TODO: Does ACF Tech have any suggested language here, especially around the penetration test aspect of our implementation?
-
-TODO: See what IaaS provider might have for this control and if there's any WAF or Defender capabilities here
+System Specific
 
 ### Related Content
 
-`Mobile code includes any program, application, or content that can be transmitted across a network (e.g., embedded in an email, document, or website) and executed on a remote system. Decisions regarding the use of mobile code within organizational systems are based on the potential for the code to cause damage to the systems if used maliciously. Mobile code technologies include Java applets, JavaScript, HTML5, WebGL, and VBScript. Usage restrictions and implementation guidelines apply to both the selection and use of mobile code installed on servers and mobile code downloaded and executed on individual workstations and devices, including notebook computers and smart phones. Mobile code policy and procedures address specific actions taken to prevent the development, acquisition, and introduction of unacceptable mobile code within organizational systems, including requiring mobile code to be digitally signed by a trusted source.`
+Mobile code includes any program, application, or content that can be transmitted across a network (e.g., embedded in an email, document, or website) and executed on a remote system. Decisions regarding the use of mobile code within organizational systems are based on the potential for the code to cause damage to the systems if used maliciously. Mobile code technologies include Java applets, JavaScript, HTML5, WebGL, and VBScript. Usage restrictions and implementation guidelines apply to both the selection and use of mobile code installed on servers and mobile code downloaded and executed on individual workstations and devices, including notebook computers and smart phones. Mobile code policy and procedures address specific actions taken to prevent the development, acquisition, and introduction of unacceptable mobile code within organizational systems, including requiring mobile code to be digitally signed by a trusted source.
