--- a/docs/Security-Compliance/Security-Controls/sc/sc-20.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-20.md
@@ -7,7 +7,7 @@ b. Provide the means to indicate the security status of child zones and (if the 
 
 ### OPS Implementation
 
-OPS makes use of native Azure services for its DNS zone. Presently, [Azure does not support DNSSEC](https://learn.microsoft.com/en-us/azure/dns/dns-faq).
+OPS makes use of native Azure services for its DNS zone. The DNS zone used for OPS depends on delegation of the parent zone from ACF Tech. Presently, [Azure does not support DNSSEC](https://learn.microsoft.com/en-us/azure/dns/dns-faq).
 
 ### Control Origination
 
