--- a/docs/Security-Compliance/Security-Controls/sc/sc-21.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-21.md
@@ -7,11 +7,9 @@ Request and perform data origin authentication and data integrity verification o
 
 OPS does not provide domain name resolution services.
 
-TODO: Seek any inherited text from IaaS provider / ACF Tech
-
 ### Control Origination
 
-Inherited from IaaS provider / ACF Tech
+Inherited from Azure / ACF Tech
 
 ### Related Content
 
