--- a/docs/Security-Compliance/Security-Controls/sc/sc-23.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-23.md
@@ -7,11 +7,9 @@ Protect the authenticity of communications sessions
 
 OPS itself utilizes secure and well-established session management mechanisms within the React-based frontend component. As part of this, unique and cryptographically secure identifiers are in use.
 
-* TODO: Investigate setting certain security parameters in React like  "HTTPOnly" and the "Secure" flags for any cookies
-
 ### Control Origination
 
-OPS-specific
+Hybrid with Azure, ACF Tech (AMS) and OPS
 
 ### Related Content
 
