--- a/docs/Security-Compliance/Security-Controls/sc/sc-39.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-39.md
@@ -5,11 +5,11 @@ Maintain a separate execution domain for each [thread in ACF-defined multi-threa
 
 ### OPS Implementation
 
-TODO: Seek inherited text or add any about containerization
+Core components of OPS function in separate application containers and distinct Azure services. These services also function with network segmentation as discussed in more detail in the OPS Configuration Managment Plan and related documents.
 
 ### Control Origination
 
-Inherited from IaaS Provider
+Hybrid with ACF Tech (AMS) and Azure
 
 ### Related Content
 
