--- a/docs/Security-Compliance/Security-Controls/si/si-02.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-02.md
@@ -11,18 +11,15 @@ d. Incorporate flaw remediation into the organizational configuration management
 
 ## OPS Implementation
 
-TODO: Text for a (dependabot, renovate, findings from ACF Tech tools), b (CI/CD), and d?
+Parts (a and b): See the OPS Configuration Management Plan for detailed documentation of updates, remediation, and testing.
 
-TODO: VMP? Scan and Pentest reports we'll get from ACF Tech
+Parts (c and d):  OPS utilizes tooling including but not limited to Dependabot and Renovatebot which will automatically check for and detect security-relevant software updates on a frequent basis. These tools will automatically open pull requests if there is an update to any software or code library in use by OPS. Resulting pull requests are reviewed and remediated in a timely fashion as necessary. As part of the Continuous Integration and Continuous Deployment methodologies used by OPS, when these pull requests have met necessary requirements, the updates are automatically deployed. If there are no findings, no pull requests will be opened.
 
-c and d.  OPS utilizes tooling including but not limited to Dependabot and Renovatebot which will automatically check for and detect security-relevant software updates on a frequent basis. These tools will automatically open pull requests if there is an update to any software or code library in use by OPS. Resulting pull requests are reviewed and remediated in a timely fashion as necessary. As part of the Continuous Integration and Continuous Deployment methodologies used by OPS, when these pull requests have met necessary requirements, the updates are automatically deployed. If there are no findings, no pull requests will be opened.
-
-TODO: Seek inherited text
-
+Additionally, ACF Tech conducts regular and independent security testing.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with Azure, AMS, and OPS
 
 ### Related Content
 
