--- a/docs/Security-Compliance/Security-Controls/sc/sc-08-1.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-08-1.md
@@ -5,15 +5,11 @@ Implement cryptographic mechanisms to [prevent unauthorized disclosure of inform
 
 ## OPS Implementation
 
-TODO: Seek inherited text
-
-OPS utilizes TLS connections for traffic passing between components and end user traffic and any interconnecting systems
-
-TODO: Check for standardized text
+OPS utilizes TLS connections for traffic passing between components and end user traffic and any interconnecting systems. For the Azure Database component, FIPS 140-2 is in use as the cryptographic module. The service uses Galois/Counter Mode (GCM) with AES 256-bit cipher included, and the keys are Azure-managed. For the Azure Application Gateway, Azure recommended and managed cipher suites are in use.
 
 ### Control Origination
 
-Hybrid inheritance with IaaS provider, OPS, and ACF/OCIO
+Hybrid inheritance with Azure, OPS, and ACF Tech
 
 ### Related Content
 
