--- a/docs/Security-Compliance/Security-Controls/sc/sc-22.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-22.md
@@ -7,11 +7,9 @@ Ensure the systems that collectively provide name/address resolution service for
 
 OPS does not provide domain name resolution services.
 
-TODO: Seek any inherited text from IaaS provider.
-
 ### Control Origination
 
-Inherited from IaaS provider / ACF Tech
+Inherited from Azure / ACF Tech
 
 ### Related Content
 Systems that provide name and address resolution services include domain name system (DNS) servers. To eliminate single points of failure in systems and enhance redundancy, organizations employ at least two authoritative domain name system servers—one configured as the primary server and the other configured as the secondary server. Additionally, organizations typically deploy the servers in two geographically separated network subnetworks (i.e., not located in the same physical facility). For role separation, DNS servers with internal roles only process name and address resolution requests from within organizations (i.e., from internal clients). DNS servers with external roles only process name and address resolution information requests from clients external to organizations (i.e., on external networks, including the Internet). Organizations specify clients that can access authoritative DNS servers in certain roles (e.g., by address ranges and explicit lists).
