--- a/docs/Security-Compliance/Security-Controls/sc/sc-28.md
+++ b/docs/Security-Compliance/Security-Controls/sc/sc-28.md
@@ -5,11 +5,11 @@ Protect the [confidentiality and integrity] of [sensitive information at rest wh
 
 ### OPS Implementation
 
-Databases (Azure Database) as well as file and object-based storage (Azure Storace Accounts) used by OPS are configured to utilize encryption-at-rest. These are the only resources known to utilize secondary storage within the OPS infrastructure. Data is encrypted on-disk, including backups and temporary files created while queries are running. Encryption services use Galois/Counter Mode (GCM) with AES-256-bit ciphers include and the keys are Azure-managed. This encryption prevent unathorized disclosure and modification of all assests and works to protect the confidentiality and integrity of OPS data. 
+Databases (Azure Database) as well as file and object-based storage (Azure Storage Accounts) used by OPS are configured to utilize encryption-at-rest. These are the only resources known to utilize secondary storage within the OPS infrastructure. Data is encrypted on-disk, including backups and temporary files created while queries are running. Encryption services use Galois/Counter Mode (GCM) with AES-256-bit ciphers include and the keys are Azure-managed. This encryption prevent unathorized disclosure and modification of all assests and works to protect the confidentiality and integrity of OPS data. 
 
 ### Control Origination
 
-Hybrid inheritance with Azure, ACF Tech, and OPS
+Hybrid inheritance with Azure, ACF Tech (AMS and Splunk), and OPS
 
 ### Related Content
 
